--- a/src/app/register/id-semillero/id-semillero.component.html
+++ b/src/app/register/id-semillero/id-semillero.component.html
@@ -4,7 +4,7 @@
       <h5 class="text-right textOrderForm">Formulario 1/4</h5>
 
   </div>
-    <form action="/register/02" method="POST">
+    <form action="/register/02">
         <div class="form-group">
             <label for="">Programa O departamento</label>
            <select class="form-control" name="pro_dep" id="pro_dep" (change)="onChange($event)" required
