--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -49,7 +49,7 @@
     <form class="form-inline my-2 my-lg-0">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link btn mx-1 uscotextbotones" routerLink="/register">Registrate</a>
+         <!-- <a class="nav-link btn mx-1 uscotextbotones" routerLink="/register">Registrate</a>-->
         </li>
         <li class="nav-item">
           <a class="nav-link btn mx-1 uscotextbotones usconavbtnLogin" routerLink="/login">Inicia Sesion</a>
