--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'assets/css/stylesusco.css'
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+html,
+body {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  color: rgba(77, 98, 108, 1);
+
+}
+
+
+.btnFormInscripcion {
+  background-color: rgb(143, 20, 27);
+  overflow: visible;
+  width: 184px;
+  white-space: nowrap;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  color: rgba(223, 212, 166, 1);
+}
+
+.btnFormInscripcion:hover {
+  color: rgb(165, 158, 130);
+}
+
+.btnFormInscripcionCancel {
+  overflow: visible;
+  width: 184px;
+  white-space: nowrap;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  color: #8f141b;
+  border: solid 1px #8f141b;
+}
+
+.btnFormInscripcionCancel:hover {
+  color: #701f23;
+
+}
+
+.textOrderForm {
+  color: #8F141B;
+
+}
