--- a/src/app/register/id-semillero/id-semillero.component.html
+++ b/src/app/register/id-semillero/id-semillero.component.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="nav nav-pills nav-fill mt-5">
-            <button type="submit" class="nav-item btn btnFormInscripcionCancel btn-lg mx-2">Cancelar Proceso</button>
+            <button type="cancel" onclick="javascript:window.location='/home';" class="nav-item btn btnFormInscripcionCancel btn-lg mx-2">Cancelar Proceso</button>
 
             <input class="nav-item btn btn-lg mx-2 btnFormInscripcion" type="submit" value="Siguiente">
           </div>
